v1.1: 4 fixes validados em produção (2026-06-10)
- ActiveQueue (CPU 100%): patch org-openide-util-lookup.jar com timeout
  > 0 no removeSuper() — evita delegação para método virtual no JDK 19+
- SystemExitAction (app não fechava): reconstrói exit()/exitNormal() em
  com-fiberhome-core.jar com LifecycleManager + watchdog Runtime.halt
- Query ONU (InaccessibleObjectException + sun.jvmstat): adiciona flags
  --add-opens=java.desktop/javax.swing.plaf.basic e --add-exports=
  jdk.internal.jvmstat/sun.jvmstat.monitor no unm2000access.conf
- SynthIcon (tela cinza ao ordenar): shim de sun.swing.plaf.synth.SynthIcon
  no jide-common.jar (classe removida no JDK 9+)

Também: _JAVA_AWT_WM_NONREPARENTING=1 no launcher (i3/sway); chmod +x
explícito em app/bin/unm2000access (unrar removia o bit).